21---react路由基本使用

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="/css/bootstrap.css">
-  <script src="https://cdn.bootcdn.net/ajax/libs/fetch/3.0.0/fetch.min.js"></script>
+  <!-- <script src="https://cdn.bootcdn.net/ajax/libs/fetch/3.0.0/fetch.min.js"></script> -->
+  <style>
+    .myActive {
+      color: red !important;
+    }
+  </style>
 </head>
 <body>
   <div id="root"></div>
